--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,20 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  
+
+}
+body::before {
+  content: "";
+  background-image: url("./Components/Images/background_yuyu.jpeg");
+  opacity: 0.2; /* Adjust the opacity to make it lighter or darker */
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1; /* Place it behind the content */
+  background-size: 300px 400px;
 }
 
 code {
