--- a/src/Components/DeckBuilder/cards.css
+++ b/src/Components/DeckBuilder/cards.css
@@ -1,7 +1,8 @@
 .card-img {
+  position: relative; /* Set the container to relative positioning */
   width: 60px;
-  height: 80px; /* You can adjust the height as needed */
-  overflow: hidden; /* Hide any overflow if the image is larger */
+  height: 80px;
+  overflow: hidden;
   border: 0px;
   background-color: rgba(0, 0, 0, 0);
 }
@@ -11,11 +12,33 @@
   max-height: 100%;
 }
 
+.ride-deck {
+  position: absolute; /* Set the text to absolute positioning */
+  top: 0;
+  left: 0;
+  z-index: 1;
+  background-color: rgba(
+    255,
+    255,
+    255,
+    0.7
+  ); /* Add a background color for better visibility */
+  padding: 4px; /* Add some padding to the text */
+}
+
 .preview-image {
   position: absolute;
-  right: 0px;
-  top: 0px;
+  right: 0;
+  top: 0;
   z-index: 1;
   width: 250px;
   background-color: aliceblue;
+  display: flex;
+  flex-direction: column;
+  align-items: center; /* Center horizontally */
+  text-align: left; /* Align text to the left */
+}
+
+.preview-image img {
+  max-width: 100%; /* Ensure the image doesn't exceed the container width */
 }
