--- a/src/Components/DeckBuilder/cards.css
+++ b/src/Components/DeckBuilder/cards.css
@@ -40,7 +40,8 @@
   right: 0;
   top: 0;
   z-index: 1;
-  width: 250px;
+  width: 280px;
+  padding:2px;
   background-color: aliceblue;
   display: flex;
   flex-direction: column;
@@ -50,6 +51,9 @@
 
 .preview-image img {
   max-width: 100%; /* Ensure the image doesn't exceed the container width */
+}
+.preview-image p {
+  padding:50px;
 }
 
 .ride-display {
