--- a/src/Components/DeckBuilder/cards.css
+++ b/src/Components/DeckBuilder/cards.css
@@ -34,14 +34,17 @@
   width: 20px;
   padding: 4px; /* Add some padding to the text */
 }
-
+.cardlist-display {
+  margin-right: 240px; /* Adjust this value as needed */
+  padding: 10px;
+}
 .preview-image {
   position: fixed;
   right: 0;
   top: 0;
   z-index: 1;
-  width: 280px;
-  padding:2px;
+  width: 250px;
+  padding:5px;
   background-color: aliceblue;
   display: flex;
   flex-direction: column;
@@ -60,10 +63,19 @@
   display: inline-block;
   margin: 5px;
 }
+
+.trigger-display-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin-right: 240px;
+}
 .trigger-display {
   display: inline-block;
   margin: 0px;
+  
 }
+
 .trig-count {
   display: inline-block;
 }
