--- a/src/Components/DeckBuilder/cards.css
+++ b/src/Components/DeckBuilder/cards.css
@@ -53,6 +53,7 @@
 }
 
 .preview-image img {
+  width:240px;
   max-width: 100%; /* Ensure the image doesn't exceed the container width */
 }
 .preview-image p {
