--- a/src/Components/DeckBuilder/cards.css
+++ b/src/Components/DeckBuilder/cards.css
@@ -10,6 +10,7 @@
 .card-img img {
   max-width: 100%;
   max-height: 100%;
+  /*color: rgb(248, 200, 200);*/
 }
 
 .ride-deck {
@@ -43,7 +44,7 @@
   right: 0;
   top: 0;
   z-index: 1;
-  width: 300px;
+  width: 250px;
   padding: 5px;
   background-color: aliceblue;
   display: flex;
@@ -141,13 +142,16 @@
 
 .grade-nation-filter {
   z-index: 1;
-  border: 2px solid black;
-  background-color: rgba(213, 228, 228, 0.774);
+  border: 5px solid rgba(55, 55, 55, 0.2);
+  background-color: rgba(129, 139, 139, 0.4);
   position: fixed;
   bottom: 0px;
-  width: 100vw;
+  width: 98vw;
+  border-top-left-radius: 50px; 
+  border-top-right-radius: 50px; 
 }
 
 .legit-checkers div {
   display: inline-block;
 }
+
